# Qt-iphone-DAS

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  master-rule.txt
.github/workflows/: ci.yml
build-desktop/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-desktop/.qt/: .qmlls.build.ini  QtDeploySupport.cmake  QtDeployTargets.cmake  SenseCapture_qml.cmake  SenseCapture_res.cmake
build-desktop/.qt/deploy_qml_imports/: SenseCapture.cmake  tst_engine.cmake  tst_main_qml.cmake
build-desktop/.qt/qml_imports/: SenseCapture_build.cmake  SenseCapture_build.rsp  SenseCapture_conf.cmake  SenseCapture_conf.rsp
build-desktop/.qt/rcc/: SenseCapture_raw_qml_0.qrc  qmake_SenseCapture.qrc  qrc_SenseCapture_raw_qml_0.cpp  qrc_qmake_SenseCapture.cpp
build-desktop/.rcc/qmlcache/: SenseCapture_main_qml.cpp  SenseCapture_main_qml.cpp.aotstats  SenseCapture_qml_loader_file_list.rsp  SenseCapture_qmlcache_loader.cpp  all_aotstats.aotstatslist  module_SenseCapture.aotstatslist
build-desktop/.rcc/qmllint/: SenseCapture.rsp  SenseCapture_json.rsp  SenseCapture_module.rsp
build-desktop/SenseCapture/: SenseCapture_qml_module_dir_map.qrc  qmldir
build-desktop/SenseCapture.app/Contents/: Info.plist
build-desktop/SenseCapture.app/Contents/MacOS/: SenseCapture
build-desktop/SenseCapture_autogen/: deps  moc_predefs.h
build-desktop/Testing/Temporary/: CTestCostData.txt
build-desktop/qmltypes/: SenseCapture_foreign_types.txt
build-desktop/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  main.qml  tst_engine  tst_engine_qmltyperegistrations.cpp  tst_main_qml  tst_main_qml_qmltyperegistrations.cpp
build-desktop/tests/.qt/: tst_engine_qml.cmake  tst_engine_res.cmake  tst_main_qml_qml.cmake  tst_main_qml_res.cmake
build-desktop/tests/.qt/qml_imports/: tst_engine_build.cmake  tst_engine_build.rsp  tst_engine_conf.rsp  tst_main_qml_build.rsp  tst_main_qml_conf.rsp
build-desktop/tests/.qt/rcc/: qmake_SenseCapture.qrc  (+7 more)
build-desktop/tests/SenseCapture/: qmldir  tst_main_qml.qml  tst_main_qml_qml_module_dir_map.qrc
build-desktop/tests/SenseCaptureEngine/: qmldir  tst_engine_qml_module_dir_map.qrc
build-desktop/tests/meta_types/: qt6tst_engine_metatypes.json  tst_engine_json_file_list.txt  tst_engine_json_file_list.txt.timestamp
build-desktop/tests/qmltypes/: tst_engine_foreign_types.txt  tst_main_qml_foreign_types.txt
build-desktop/tests/tst_engine_autogen/: deps  moc_predefs.h
build-desktop/tests/tst_main_qml_autogen/: deps  moc_predefs.h
ios/: Info.plist
tests/: CMakeLists.txt  qml_test_runner.cpp  tst_engine.cpp
(+21 files in other folders)
